10165
The precise compilation error is:
```scala
Bug.scala:10: error: kinds of the type arguments (Bug.Definition.InSeq) do not conform to the expected kinds of the type parameters (type W).
Bug.Definition.InSeq's type parameters do not match type W's expected parameters:
<none> is invariant, but type Y2 is declared covariant
<none>'s bounds<notype> are stricter than type X2's declared bounds >: Nothing <: Any, <none>'s bounds<notype> are stricter than type Y2's declared bounds >: Nothing <: Any
    val result = Definition.ofType[Definition.InSeq]
                                  ^
one error found
```
